--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
+    "jspdf": "^3.0.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-qrcode-logo": "^4.0.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
